# manifold-steering-replication

./: .gitignore  LICENSE  README.md  pyproject.toml
checkpoints/: months_L24_acts_probs.npz  steering_probs_L24.npz  weekdays_L24_acts_probs.npz
figures/: weekdays_L24_Tuesday_Friday_3d.html  weekdays_L24_Tuesday_Friday_slider.html
figures/gemma_torus/: acts_2b_L24.pt
figures/hierarchical_steering/: acts_L24.pt  sanity_check.json  steering_probs.npz
report/: Makefile  main.tex
scripts/: plot_months_separate.py  plot_probs_separate.py  plot_subspace_hours.py  plot_torus_activation_space.py  plot_weekdays_separate.py  render_torus_3d_L24.py  run_gemma_torus.py  run_hierarchical_steering.py  run_months.py  run_steering_probs.py  run_weekdays.py
slurm/: run_all.sh  steering.sbatch
